--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "sqlite3": "^4.1.1"
   },
   "scripts": {
-    "start": "nodemon src/server.js",
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
     "test": "cross-env NODE_ENV=test jest"
   },
   "devDependencies": {
